--- a/sexshop/appsexshop/templates/crud/subcategorias.html
+++ b/sexshop/appsexshop/templates/crud/subcategorias.html
@@ -144,11 +144,8 @@
           {% if messages %}
             <div>
               {% for message in messages %}
-<<<<<<< HEAD
                 <div class="alert alert-{{ message }} alert-dismissible fade show" role="alert">
-=======
                 <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
->>>>>>> 7c57998c5c8818fdd469d080e6825642ca668a1f
                   {{ message }}
                   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
@@ -176,8 +173,8 @@
                   {% csrf_token %}
                   <div class="mb-3">
                       <label for="inputState" class="form-label">Elige La Categoría</label>
-                      <select id="inputState" name="categoria_id" class="form-select">
-                          <option selected disabled>Selecciona una categoría</option>
+                      <select id="inputState" name="categoria_id" class="form-select" required>
+                          <option value="">Seleccione una categoría</option>
                           {% for categoria in categorias %}
                               <option value="{{ categoria.IdCategoria }}">{{ categoria.NombreCategoria }}</option>
                           {% endfor %}
@@ -239,8 +236,8 @@
                         {% csrf_token %}
                         <div class="mb-3">
                             <label for="inputState" class="form-label">Elige La Categoría</label>
-                            <select id="inputState" name="categoria_id" class="form-select">
-                                <option disabled>Selecciona una categoría</option>
+                            <select id="inputState" name="categoria_id" class="form-select" required>
+                                <option value="">Seleccione una categoría</option>
                                 {% for categoria in categorias %}
                                     <option value="{{ categoria.IdCategoria }}" {% if subcategoria.categoria.IdCategoria == categoria.IdCategoria %}selected{% endif %}>
                                         {{ categoria.NombreCategoria }}
