--- a/sexshop/appsexshop/templates/login/login.html
+++ b/sexshop/appsexshop/templates/login/login.html
@@ -35,7 +35,7 @@
       <input type="email" name="correo" class="input" placeholder="Correo Electrónico" required minlength="3">
       <span class="error-message" id="error-email"></span>
 
-      <input type="password" name="contraseña" class="input" placeholder="Contraseña" required minlength="8">
+      <input type="password" name="contrasena" class="input" placeholder="Contraseña" required minlength="8">
       <span class="error-message" id="error-password"></span>
 
       <p class="page-link">
