--- a/sexshop/appsexshop/templates/login/codigo.html
+++ b/sexshop/appsexshop/templates/login/codigo.html
@@ -24,8 +24,10 @@
         text-align: center;
       }
       .messages .error{
+        background-color: rgba(255, 0, 0, 0.1); /* Rojo suave */
         color:red;
         font-size: 18px;
+        border: 1px solid red;
       }
       
     </style>
