--- a/sexshop/appsexshop/templates/login/registro.html
+++ b/sexshop/appsexshop/templates/login/registro.html
@@ -9,18 +9,34 @@
   <link rel="stylesheet" href="{% static 'css/registro.css' %}">
   <link rel="icon" type="image/png" href="../assets/img/logoNegro.png">
 
-  <style>
-    .error {
-      border: 2px solid rgb(255, 0, 0);
-    }
+<style>
 
-    .error-message {
-      color: red;
-      font-size: 14px;
-      margin-top: 5px;
-      display: none; /* Oculto por defecto */
-    }
-  </style>
+      .messages {
+        margin-bottom: 15px;
+        margin-top: 10px;
+      }
+
+      .message {
+        background-color: rgba(0, 128, 0, 0.1); /* Verde suave */
+        border: 1px solid green;
+        padding: 10px;
+        border-radius: 8px;
+        color: green;
+        font-weight: bold;
+        text-align: center;
+      }
+      .error {
+        background-color: rgba(255, 0, 0, 0.1); /* Rojo suave */
+        border: 1px solid red;
+        padding: 10px;
+        border-radius: 8px;
+        color: red;
+        font-weight: bold;
+        text-align: center; 
+      }
+
+      
+    </style>
 
 </head>
 <body>
@@ -32,23 +48,35 @@
       <form class="form" method="post" action="{% url 'registro' %}">
         {% csrf_token %}
         <div class="container1">
-          <input type="text" name="PrimerNombre" placeholder="Primer Nombre" required minlength="3">
-          <input type="text" name="OtrosNombres" placeholder="Otros Nombres" required minlength="3">
+          <input type="text" name="PrimerNombre" placeholder="Primer Nombre" value="{{ valores.PrimerNombre }}">
+          <input type="text" name="OtrosNombres" placeholder="Otros Nombres" value="{{ valores.OtrosNombres }}">
         </div>
 
         <div class="container2">
-          <input type="text" name="PrimerApellido" placeholder="Primer Apellido" required minlength="3">
-          <input type="text" name="SegundoApellido" placeholder="Segundo Apellido" required minlength="3">
+          <input type="text" name="PrimerApellido" placeholder="Primer Apellido" value="{{ valores.PrimerApellido }}" >
+          <input type="text" name="SegundoApellido" placeholder="Segundo Apellido" value="{{ valores.SegundoApellido }}">
         </div>
 
         <div class="container3">
-          <input type="email" name="Correo" placeholder="Correo" required minlength="3">
+          <input type="email" name="Correo" placeholder="Correo" value="{{ valores.Correo }}">
           
-          <input type="text" name="NombreUsuario" placeholder="Nombre Usuario" required>
+          <input type="text" name="NombreUsuario" placeholder="Nombre Usuario" value="{{ valores.NombreUsuario }}">
         </div>
 
+        
+
         <div class="container4">
-          <input type="password" name="Contrasena" placeholder="Contraseña" required minlength="8">
+          <input type="password" name="Contrasena" placeholder="Contraseña">
+
+          {% if messages %}
+      <div class="messages">
+          {% for message in messages %}
+          <div class="message {% if message.tags %}{{ message.tags }}{% endif %}">
+              {{ message }}
+          </div>
+          {% endfor %}
+      </div>
+      {% endif %}
           <button type="submit" class="form-btn">Registrarse</button>
         </div>
       </form>
